service: Do not rely on Action header's format

The code previously relied on the Action header conforming to standard,
including the ". The code now checks for them and adds if missing.

https://bugzilla.gnome.org/show_bug.cgi?id=793955